--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   icons_plus: ^5.0.0
   carousel_slider: ^5.0.0
+  google_nav_bar: ^5.0.7
+  convex_bottom_bar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
